--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">On This Day</string>
+    <string name="please_check_network_connection">Please check your network connection</string>
 </resources>
