--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">On This Day</string>
+    <string name="on_this_day">On this day</string>
     <string name="please_check_network_connection">Please check your network connection</string>
+    <string name="related_pages">Related Pages</string>
 </resources>
