Added Read more + languages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="on_this_day">On this day</string>
     <string name="please_check_network_connection">Please check your network connection</string>
     <string name="related_pages">Related Pages</string>
+    <string name="read_more">Read more...</string>
 </resources>
