--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -4,4 +4,5 @@
     <string name="please_check_network_connection">Por favor verifique su conexión de red</string>
     <string name="on_this_day">En este día</string>
     <string name="related_pages">Páginas relacionadas</string>
+    <string name="read_more">Leer más...</string>
 </resources>
