--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -4,4 +4,5 @@
     <string name="please_check_network_connection">Verifique sua conexão de rede</string>
     <string name="on_this_day">Neste dia</string>
     <string name="related_pages">Páginas relacionadas</string>
+    <string name="read_more">Consulte Mais informação...</string>
 </resources>
