--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -4,4 +4,5 @@
     <string name="please_check_network_connection">Kontrollera din nätverksanslutning</string>
     <string name="on_this_day">På denna dag</string>
     <string name="related_pages">Relaterade sidor</string>
+    <string name="read_more">Läs mer...</string>
 </resources>
