Updated obfuscation and strings

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -4,5 +4,5 @@
     <string name="please_check_network_connection">Bitte überprüfen Sie Ihre Netzwerkverbindung</string>
     <string name="on_this_day">An diesem Tag</string>
     <string name="related_pages">Verwandte Seiten</string>
-    <string name="read_more">Mehr lesen...</string>
+    <string name="read_more">Mehr lesen&#8230;</string>
 </resources>
