--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -4,5 +4,5 @@
     <string name="please_check_network_connection">يرجى التحقق من اتصال الشبكة الخاصة بك</string>
     <string name="on_this_day">في هذا اليوم</string>
     <string name="related_pages">الصفحات ذات الصلة</string>
-    <string name="read_more">اقرأ أكثر...</string>
+    <string name="read_more">اقرأ أكثر&#8230;</string>
 </resources>
