--- a/app/src/main/res/values-bs/strings.xml
+++ b/app/src/main/res/values-bs/strings.xml
@@ -4,5 +4,5 @@
     <string name="please_check_network_connection">Provjerite svoju mrežnu vezu</string>
     <string name="on_this_day">Na ovaj dan</string>
     <string name="related_pages">Povezane stranice</string>
-    <string name="read_more">Čitaj više...</string>
+    <string name="read_more">Čitaj više&#8230;</string>
 </resources>
