--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -4,5 +4,5 @@
     <string name="please_check_network_connection">Veuillez vérifier votre connexion réseau</string>
     <string name="on_this_day">Ce jour-là</string>
     <string name="related_pages">Pages connexes</string>
-    <string name="read_more">En savoir plus...</string>
+    <string name="read_more">En savoir plus&#8230;</string>
 </resources>
